@@ -1,14 +1,13 @@
 package dn.quest.statistics.config;
 
-import dn.quest.shared.config.JwtUtil;
-import io.jsonwebtoken.ExpiredJwtException;
-import io.jsonwebtoken.security.SignatureException;
+import dn.quest.shared.utils.JwtUtil;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -18,8 +17,8 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * JWT фильтр аутентификации для Statistics Service
@@ -31,6 +30,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
 
+    @Value("${jwt.secret}")
+    private String jwtSecret;
+
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
@@ -40,14 +42,14 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         try {
             String jwt = getJwtFromRequest(request);
 
-            if (StringUtils.hasText(jwt) && !jwtUtil.isTokenExpired(jwt)) {
-                String username = jwtUtil.extractUsername(jwt);
-                List<String> roles = jwtUtil.extractRoles(jwt);
+            if (StringUtils.hasText(jwt) && !jwtUtil.isTokenExpired(jwt, jwtSecret)) {
+                String username = jwtUtil.extractSubject(jwt, jwtSecret);
+                List<String> roles = extractRolesFromToken(jwt);
 
                 if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
                     List<SimpleGrantedAuthority> authorities = roles.stream()
                             .map(SimpleGrantedAuthority::new)
-                            .collect(Collectors.toList());
+                            .toList();
 
                     UsernamePasswordAuthenticationToken authentication = 
                             new UsernamePasswordAuthenticationToken(username, null, authorities);
@@ -58,21 +60,29 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                     log.debug("Set authentication for user: {} with roles: {}", username, roles);
                 }
             }
-        } catch (ExpiredJwtException e) {
-            log.warn("JWT token is expired: {}", e.getMessage());
-            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "JWT token is expired");
-            return;
-        } catch (SignatureException e) {
-            log.warn("JWT token signature is invalid: {}", e.getMessage());
-            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "JWT token signature is invalid");
-            return;
         } catch (Exception e) {
             log.error("Cannot set user authentication: {}", e.getMessage());
-            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid JWT token");
-            return;
         }
 
         filterChain.doFilter(request, response);
+    }
+
+    /**
+     * Извлекает роли из JWT токена
+     */
+    private List<String> extractRolesFromToken(String jwt) {
+        try {
+            Object rolesClaim = jwtUtil.getCustomClaim(jwt, jwtSecret, "roles");
+            if (rolesClaim instanceof List<?> roles) {
+                return roles.stream()
+                        .map(Object::toString)
+                        .toList();
+            }
+            return Collections.emptyList();
+        } catch (Exception e) {
+            log.debug("Failed to extract roles from token: {}", e.getMessage());
+            return Collections.emptyList();
+        }
     }
 
     private String getJwtFromRequest(HttpServletRequest request) {
